--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Sid Scrolly Map</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">   
-    <link rel="icon" type="image/x-icon" href="img\icon.ico"> 
+    <link rel="icon" type="image/x-icon" href="img/icon.ico"> 
 
     <link href="https://www.dafontfree.net/embed/bGF0aW4td2lkZS1yZWd1bGFyJmRhdGEvMjYvbC8xMzIwMTgvRXNwYW5hV2lkZS50dGY" rel="stylesheet" type="text/css"/>
     
