--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--add scrollmap content here-->
     <div class="content">
         <!--title block, background image is title image-->
-        <div class="row" style="background-image:url(img/title.png)">
+        <div class="row" style="background-image:url(img/title.png);">
             <div class="title">
                 <div class="center">
                 <!--title text-->
